examples/avm-res-web-site/0.23.0/submodules/config_slotconfignames/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# config\_slotconfignames submodule

This submodule manages the sticky slot configuration names (`Microsoft.Web/sites/config`, name: `slotConfigNames`) for an Azure App Service site.

It can be used independently to configure which app settings and connection strings are sticky (not swapped during slot swaps) on an existing site.

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (~> 1.9)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.12)

## Resources

The following resources are used by this module:

- [azapi_update_resource.this](https://registry.terraform.io/providers/Azure/azapi/latest/docs/resources/update_resource) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_parent_id"></a> [parent\_id](#input\_parent\_id)

Description: The resource ID of the App Service site.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_app_setting_names"></a> [app\_setting\_names](#input\_app\_setting\_names)

Description: A list of app setting names that should be sticky (not swapped during slot swaps).

Type: `list(string)`

Default: `[]`

### <a name="input_connection_string_names"></a> [connection\_string\_names](#input\_connection\_string\_names)

Description: A list of connection string names that should be sticky (not swapped during slot swaps).

Type: `list(string)`

Default: `[]`

### <a name="input_ignore_body_changes"></a> [ignore\_body\_changes](#input\_ignore\_body\_changes)

Description: Body-relative paths whose changes are ignored, keyed by AzAPI resource type. Paths use dot notation, and a change takes effect only after an apply.

The AzAPI provider exposes `ignore_body_changes` on `azapi_resource` only, and this module manages its resource with `azapi_update_resource`. The variable exists for interface consistency; setting a non-empty value fails the plan with an explicit error rather than being silently ignored.

- `web_sites_config` - Paths ignored on the slot config names resource.

Type:

```hcl
object({
    web_sites_config = optional(list(string), [])
  })
```

Default: `{}`

### <a name="input_resource_types"></a> [resource\_types](#input\_resource\_types)

Description: AzAPI resource types and API versions used by this module.

- `web_sites_config` - Resource type and API version for the slot config names resource.

Type:

```hcl
object({
    web_sites_config = optional(string, "Microsoft.Web/sites/config@2025-03-01")
  })
```

Default: `{}`

### <a name="input_retry"></a> [retry](#input\_retry)

Description: Retry configuration for the AzAPI resources declared by this module. Defaults to retrying the conflict Azure returns while another operation on the site is in progress.

- `error_message_regex` - (Optional) A list of regular expressions matched against error messages. A match triggers a retry.
- `interval_seconds` - (Optional) The initial interval in seconds between retries.
- `max_interval_seconds` - (Optional) The maximum interval in seconds between retries.

Type:

```hcl
object({
    error_message_regex  = optional(list(string), ["Cannot modify this site because another operation is in progress"])
    interval_seconds     = optional(number, 10)
    max_interval_seconds = optional(number)
  })
```

Default: `{}`

### <a name="input_timeouts"></a> [timeouts](#input\_timeouts)

Description: Per-operation timeouts applied to the AzAPI resources declared by this module. Defaults to `null`, which uses the provider defaults. Each value is a Go duration string such as `30m`.

- `create` - (Optional) Timeout for create operations.
- `delete` - (Optional) Timeout for delete operations.
- `read` - (Optional) Timeout for read operations.
- `update` - (Optional) Timeout for update operations.

Type:

```hcl
object({
    create = optional(string)
    delete = optional(string)
    read   = optional(string)
    update = optional(string)
  })
```

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the config resource.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The resource ID of the config resource.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
